--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
-.accordion nav {
-    border: 1px solid #e9ecef;
-    border-radius: 3px;
-    
+.content-bek-ofis > div {
+    border: 1px solid #cbcbcb;
+    border-radius: 5px;
+    margin-bottom: 1em;
+}
+.content-bek-ofis h3 {
+    margin-top: .5em;
 }
