--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,37 @@
+@font-face {
+  font-family: "Rokkitt";
+  src: url(../fonts/Rokkitt-VariableFont_wght.ttf);
+}
+@font-face {
+  font-family: "ItalicRokkitt";
+  src: url(../fonts/Rokkitt-Italic-VariableFont_wght.ttf);
+}
+body {
+  font-family: "Rokkitt";
+}
+
+#header-style {
+  display: block;
+}
+#header-style h1 {
+  font-size: 5rem;
+}
+#header-style h1 span {
+  font-size: 3rem;
+}
+#header-style h2 {
+  font-style: italic;
+  font-weight: 400;
+  margin-top: -35px;
+  margin-left: 105px;
+}
+
 .style-form {
   background: rgba(0, 87, 183, 0.1);
   border-radius: 10px;
   padding: 1rem;
 }
 .style-form > label {
-  font-weight: bold;
   display: block;
   text-transform: uppercase;
 }
